--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
       - mqtt:/mosquitto/data
     tmpfs:
       - /mosquitto/log
+    restart: unless-stopped
   octoprint:
     image: octoprint/octoprint
     restart: unless-stopped
