--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,3 +41,22 @@ services:
     volumes:
       - octoprint:/octoprint
       - /dev:/dev
+  # TTS for Home Assistant
+  piper:
+    image: lscr.io/linuxserver/piper:latest
+    container_name: piper
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+      - PIPER_VOICE=en_US-lessac-medium
+      - PIPER_LENGTH=1.0 #optional
+      - PIPER_NOISE=0.667 #optional
+      - PIPER_NOISEW=0.333 #optional
+      - PIPER_SPEAKER=0 #optional
+      - PIPER_PROCS=1 #optional
+    volumes:
+      - /path/to/piper/data:/config
+    ports:
+      - 10200:10200
+    restart: unless-stopped
